fix(pidan): hero bgimg right spacing 56px

--- a/css/foods/pidan.css
+++ b/css/foods/pidan.css
@@ -26,11 +26,11 @@
 
 .food-pidan .food-hero-bgimg {
   position: absolute;
-  right: 0;
+  right: 56px;
   bottom: 0;
   height: 50%;
   width: auto;
-  max-width: 80%;
+  max-width: 70%;
   object-fit: contain;
   -webkit-mask-image: linear-gradient(to right, transparent 0%, black 50%, black 100%);
   mask-image: linear-gradient(to right, transparent 0%, black 50%, black 100%);
